calm-hub/deploy/azure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calm-hub
  labels:
    app.kubernetes.io/name: calm-hub
    app.kubernetes.io/part-of: calm
